# vds-xarray

./: .gitignore  CLAUDE.md  prizm_example_utils.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: BUILD.md
docs/source/: .gitignore  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt
docs/source/_static/: custom.css
docs/source/_templates/: .gitkeep
docs/source/ai-agents/: architecture.rst  development.rst  guardrails.rst  index.rst  testing.rst
docs/source/explanation/: architecture.rst  design-decisions.rst  index.rst  lazy-loading.rst  vds-format.rst  why-xarray.md
docs/source/howto/: export-data.rst  index.rst  integration.rst  performance-optimization.rst  selection-slicing.rst  troubleshooting.rst  visualization-recipes.rst
docs/source/reference/: api.rst  backend-protocol.rst  chunking.rst  configuration.rst  coordinate-system.rst  index.rst
docs/source/tutorials/: data-analysis.rst  first-dataset.rst  index.rst  large-datasets.rst  visualization.rst
vdsxarray/: __init__.py  vds.py
