[project]
name = "vdsxarray"
version = "1.0.1"
description = "An xarray backend for reading VDS (Volume Data Store) seismic data files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Guillermo Vargas", email = "gavargas22@gmail.com" }
]
maintainers = [
    { name = "Guillermo Vargas", email = "gavargas22@gmail.com" }
]
keywords = ["xarray", "vds", "seismic", "geophysics", "voluum", "data", "backend"]
requires-python = ">=3.9,<3.12"
dependencies = [
    "dask>=2024.8.0",
    "openvds>=3.4.6",
    "ovds-utils>=0.3.1",
    "xarray>=2024.7.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/gavargas22/vds-xarray-backend"
"Repository" = "https://github.com/gavargas22/vds-xarray-backend"
"Documentation" = "https://gavargas22.github.io/vds-xarray-backend/"
"Bug Tracker" = "https://github.com/gavargas22/vds-xarray-backend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vdsxarray"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "pip>=25.2",
    "scipy>=1.13.1",
]
publish = [
    "build>=1.0.0",
    "twine>=5.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.entry-points."xarray.backends"]
vds = "vdsxarray.vds:VdsEngine"

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["vdsxarray"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
